--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,17 @@ android {
 
 dependencies {
     def room_version = "2.4.3"
+    def lifecycle_version = "2.5.1"
+
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
