--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     def room_version = "2.4.3"
     def lifecycle_version = "2.5.1"
 
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.3'
+
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation "androidx.room:room-runtime:$room_version"
